EAX-116 - Log widget added.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -183,10 +183,12 @@ qt5_wrap_ui(FORMS
     ${SRC_DIR}/ui/gotoaddressdialog.ui
     ${SRC_DIR}/ui/createchunkdialog.ui
     ${SRC_DIR}/ui/databaseinfo.ui
+    ${SRC_DIR}/ui/logwidget.ui
     )
 
 # EXE: Main executable
 add_executable(main_ui
+    ${INCLUDE_DIR}/ui/logwidget.h
     ${INCLUDE_DIR}/ui/veles_mainwindow.h
     ${INCLUDE_DIR}/ui/hexedittab.h
     ${INCLUDE_DIR}/ui/optionsdialog.h
@@ -204,6 +206,7 @@ add_executable(main_ui
     ${INCLUDE_DIR}/ui/spinbox.h
     ${INCLUDE_DIR}/ui/spinboxvalidator.h
     ${SRC_DIR}/ui/main.cc
+    ${SRC_DIR}/ui/logwidget.cc
     ${SRC_DIR}/ui/veles_mainwindow.cc
     ${SRC_DIR}/ui/hexedittab.cc
     ${SRC_DIR}/ui/optionsdialog.cc
@@ -228,6 +231,7 @@ add_executable(main_ui
     ${CMAKE_SOURCE_DIR}/moc_digram.cpp
     ${CMAKE_SOURCE_DIR}/moc_veles_mainwindow.cpp
     ${CMAKE_SOURCE_DIR}/moc_hexedittab.cpp
+    ${CMAKE_SOURCE_DIR}/moc_logwidget.cpp
     ${CMAKE_SOURCE_DIR}/moc_optionsdialog.cpp
     ${CMAKE_SOURCE_DIR}/moc_hexedit.cpp
     ${CMAKE_SOURCE_DIR}/moc_searchdialog.cpp
