[EAX-130] Hex edit tab split into two separate tabs.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -193,7 +193,8 @@ qt5_wrap_ui(FORMS
 add_executable(main_ui
     ${INCLUDE_DIR}/ui/logwidget.h
     ${INCLUDE_DIR}/ui/veles_mainwindow.h
-    ${INCLUDE_DIR}/ui/hexedittab.h
+    ${INCLUDE_DIR}/ui/hexeditwidget.h
+    ${INCLUDE_DIR}/ui/nodetreewidget.h
     ${INCLUDE_DIR}/ui/optionsdialog.h
     ${INCLUDE_DIR}/ui/hexedit.h
     ${INCLUDE_DIR}/ui/searchdialog.h
@@ -211,7 +212,8 @@ add_executable(main_ui
     ${SRC_DIR}/ui/main.cc
     ${SRC_DIR}/ui/logwidget.cc
     ${SRC_DIR}/ui/veles_mainwindow.cc
-    ${SRC_DIR}/ui/hexedittab.cc
+    ${SRC_DIR}/ui/hexeditwidget.cc
+    ${SRC_DIR}/ui/nodetreewidget.cc
     ${SRC_DIR}/ui/optionsdialog.cc
     ${SRC_DIR}/ui/hexedit.cc
     ${SRC_DIR}/ui/searchdialog.cc
@@ -233,7 +235,8 @@ add_executable(main_ui
     ${CMAKE_SOURCE_DIR}/moc_commands.cpp
     ${CMAKE_SOURCE_DIR}/moc_digram.cpp
     ${CMAKE_SOURCE_DIR}/moc_veles_mainwindow.cpp
-    ${CMAKE_SOURCE_DIR}/moc_hexedittab.cpp
+    ${CMAKE_SOURCE_DIR}/moc_hexeditwidget.cpp
+    ${CMAKE_SOURCE_DIR}/moc_nodetreewidget.cpp
     ${CMAKE_SOURCE_DIR}/moc_logwidget.cpp
     ${CMAKE_SOURCE_DIR}/moc_optionsdialog.cpp
     ${CMAKE_SOURCE_DIR}/moc_hexedit.cpp
