--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -1,6 +1,7 @@
 [metadata]
 name = veles
 home-page = https://codisec.com/veles/
+description-file = README.rst
 author = CodiSec
 author-email = veles@codisec.com
 
