Converted RawEncoder into TextEncoder (due to problems with Windows clipboard)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,9 +65,10 @@ add_library(veles_base
     ${INCLUDE_DIR}/util/settings/network.h
     ${INCLUDE_DIR}/util/encoders/encoder.h
     ${INCLUDE_DIR}/util/encoders/factory.h
-    ${INCLUDE_DIR}/util/encoders/raw_encoder.h
+    ${INCLUDE_DIR}/util/encoders/text_encoder.h
     ${INCLUDE_DIR}/util/encoders/base64_encoder.h
     ${INCLUDE_DIR}/util/encoders/hex_encoder.h
+    ${INCLUDE_DIR}/util/string_utils.h
     ${SRC_DIR}/util/icons.cc
     ${SRC_DIR}/util/concurrency/threadpool.cc
     ${SRC_DIR}/util/sampling/isampler.cc
@@ -77,10 +78,11 @@ add_library(veles_base
     ${SRC_DIR}/util/settings/hexedit.cc
     ${SRC_DIR}/util/settings/network.cc
     ${SRC_DIR}/util/encoders/encoder.cc
-    ${SRC_DIR}/util/encoders/raw_encoder.cc
+    ${SRC_DIR}/util/encoders/text_encoder.cc
     ${SRC_DIR}/util/encoders/base64_encoder.cc
     ${SRC_DIR}/util/encoders/hex_encoder.cc
     ${SRC_DIR}/util/encoders/factory.cc
+    ${SRC_DIR}/util/string_utils.cc
     ${SRC_DIR}/util/version.cc)
 
 qt5_use_modules(veles_base Core Gui Widgets)
