--- a/python/tox.ini
+++ b/python/tox.ini
@@ -7,6 +7,7 @@ usedevelop = True
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 commands = python setup.py testr --slowest --testr-args='{posargs}'
+sitepackages = False
 
 [testenv:pep8]
 basepython = python3.5
