--- a/protobuf/CMakeLists.txt
+++ b/protobuf/CMakeLists.txt
@@ -12,8 +12,26 @@ else(${CMAKE_VERSION} VERSION_GREATER "3.3.2")
     VERBATIM )
 endif(${CMAKE_VERSION} VERSION_GREATER "3.3.2")
 
+
+set(MSGPACK_TMP_CPP ${CMAKE_CURRENT_BINARY_DIR}/messages-h4x.h)
+set(MSGPACK_CPP "${CMAKE_CURRENT_BINARY_DIR}/messages.h")
+
+# TODO rename folder after protobuf is no more
+add_custom_command(OUTPUT ${MSGPACK_TMP_CPP}
+  COMMAND ${PYEXE} -m veles.cpp.generate > ${MSGPACK_TMP_CPP}
+  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/python
+  COMMENT "Generating msgpack C++ code from Python"
+  VERBATIM)
+
+# H4X make sure that messages.h is generated everytime no matter what
+add_custom_command(OUTPUT ${MSGPACK_CPP}
+  COMMAND ${CMAKE_COMMAND} -E rename ${MSGPACK_TMP_CPP} ${MSGPACK_CPP}
+  DEPENDS ${MSGPACK_TMP_CPP})
+
 add_library(veles_network
     ${INCLUDE_DIR}/network/server.h
+    ${MSGPACK_CPP}
+    ${INCLUDE_DIR}/network/msgpackwrapper.h
     ${PROTO_SRCS}
     ${SRC_DIR}/network/server.cc
     ${PROTO_HDRS}
@@ -27,7 +45,7 @@ add_custom_command(TARGET veles_network POST_BUILD
   ${PROTO_PY}
   ${CMAKE_SOURCE_DIR}/python/veles)
 
-add_dependencies(veles_network protobuf)
+add_dependencies(veles_network protobuf msgpack-c)
 qt5_use_modules(veles_network Core Network Widgets)
 
 target_link_libraries(veles_network veles_base)
