UI - connection status notification

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -258,6 +258,7 @@ qt5_wrap_ui(FORMS
     ${SRC_DIR}/ui/databaseinfo.ui
     ${SRC_DIR}/ui/logwidget.ui
     ${SRC_DIR}/ui/connectiondialog.ui
+    ${SRC_DIR}/ui/connectionnotificationwidget.ui
     )
 
 if(WIN32)
